update from hs to nimbus

--- a/advanced/backtesting-engine.mdx
+++ b/advanced/backtesting-engine.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Backtesting Engine"
-description: "Test and validate your trading strategies against historical data with Hyperscript's comprehensive backtesting framework"
+description: "Test and validate your trading strategies against historical data with Nimbus's comprehensive backtesting framework"
 ---
 
 ## What is Backtesting?
 
-Backtesting is the process of testing trading strategies against historical market data to evaluate their performance before deploying real capital. Hyperscript's backtesting engine provides comprehensive simulation capabilities with accurate orderbook modeling and realistic execution assumptions.
+Backtesting is the process of testing trading strategies against historical market data to evaluate their performance before deploying real capital. Nimbus's backtesting engine provides comprehensive simulation capabilities with accurate orderbook modeling and realistic execution assumptions.
 
 ## Why Backtesting Matters
 
@@ -46,7 +46,7 @@ Backtesting helps you understand how your strategies would have performed in dif
 
 </CardGroup>
 
-## Hyperscript's Backtesting Advantage
+## Nimbus's Backtesting Advantage
 
 ### High-Fidelity Simulation
 
@@ -608,7 +608,7 @@ Benchmark Comparison Results:
 </Card>
 
 <Card title="Signal-Based Trading" icon="radar" href="/trading-strategies/signal-based-trading">
-  Backtest strategies using Hyperscript's signal engine.
+  Backtest strategies using Nimbus's signal engine.
 
 </Card>
 
