--- a/getting-started/first-bot.mdx
+++ b/getting-started/first-bot.mdx
@@ -31,7 +31,7 @@ For beginners, we recommend starting with these low-risk strategies:
 </CardGroup>
 
 <Info>
-  Both strategies are conservative and perfect for learning how Hyperscript
+  Both strategies are conservative and perfect for learning how Nimbus
   works before moving to more advanced strategies.
 
 </Info>
