--- a/getting-started/quickstart.mdx
+++ b/getting-started/quickstart.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Quick Start Guide"
-description: "Get up and running with your first Hyperscript trading bot in under 10 minutes"
+description: "Get up and running with your first Nimbus trading bot in under 10 minutes"
 ---
 
 ## Get Started in Three Steps
@@ -11,7 +11,7 @@ Launch your first automated trading bot on Hyperliquid quickly and safely.
 
 <AccordionGroup>
   <Accordion icon="wallet" title="Connect Wallet">
-    Connect your wallet to Hyperscript using WalletConnect or MetaMask. Your
+    Connect your wallet to Nimbus using WalletConnect or MetaMask. Your
     wallet will be used to sign transactions and manage your trading positions.
     <Warning>
       Ensure your wallet has sufficient Hyperliquid testnet tokens for testing
@@ -23,7 +23,7 @@ Launch your first automated trading bot on Hyperliquid quickly and safely.
   <Accordion icon="key" title="Generate API Keys">
     1. Visit [Hyperliquid API Settings](https://app.hyperliquid.xyz/api) 2.
     Create new API keys for trading 3. Copy the API key and secret (store
-    securely!) 4. Add these credentials to your Hyperscript account settings
+    securely!) 4. Add these credentials to your Nimbus account settings
     <Tip>Start with testnet API keys to practice risk-free.</Tip>
   
 </Accordion>
@@ -38,7 +38,7 @@ Launch your first automated trading bot on Hyperliquid quickly and safely.
     Rebalancer**: - **DCA Bot**: Automatically buy assets at regular intervals
     regardless of price - **Smart Portfolio Rebalancer**: Maintain target
     allocation percentages across multiple assets Both strategies are low-risk
-    and perfect for learning how Hyperscript works.
+    and perfect for learning how Nimbus works.
   
 </Accordion>
   <Accordion icon="sliders" title="Set Parameters">
@@ -103,7 +103,7 @@ Now that you have your first bot running, explore these features:
 </CardGroup>
 
 <Note>
-  **Need help?** Join our [Discord community](https://discord.gg/hyperscript) or
-  contact [support](mailto:support@hyperscript.xyz) for assistance.
+  **Need help?** Join our [Telegram community](https://t.me/nimbustradetg) or
+  contact [support](mailto:support@nimbus.trade) for assistance.
 
 </Note>{" "}
