--- a/getting-started/risk-management.mdx
+++ b/getting-started/risk-management.mdx
@@ -41,7 +41,7 @@ Never risk more than you can afford to lose on any single trade or strategy.
 
 </Info>
 
-## Risk Controls in Hyperscript
+## Risk Controls in Nimbus
 
 ### Portfolio-Level Controls
 
@@ -94,7 +94,7 @@ Automatically pause bots during adverse conditions:
 
 ### Portfolio Risk Score
 
-Hyperscript calculates a real-time risk score based on:
+Nimbus calculates a real-time risk score based on:
 
 - Current position sizes
 - Asset correlations
@@ -202,7 +202,7 @@ Position Size = (0.6 × 10 - 0.4 × 5) / 10 = 0.4 or 40% of available capital
 
 ### Circuit Breakers
 
-Hyperscript includes automatic circuit breakers:
+Nimbus includes automatic circuit breakers:
 
 1. **5% daily loss**: Pause all bots for 1 hour
 2. **10% daily loss**: Pause all bots until manual review
@@ -220,9 +220,9 @@ Always maintain the ability to:
 
 In emergency situations:
 
-1. Check our [Status Page](https://status.hyperscript.xyz)
-2. Join our [Discord](https://discord.gg/hyperscript) for real-time updates
-3. Contact emergency support: [urgent@hyperscript.xyz](mailto:urgent@hyperscript.xyz)
+1. Check our [Status Page](https://status.nimbus.trade)
+2. Join our [Discord](https://t.me/nimbustradetg) for real-time updates
+3. Contact emergency support: [support@nimbus.trade](mailto:urgent@nimbus.trade)
 
 ## Risk Management Checklist
 
