--- a/guides/market-analysis.mdx
+++ b/guides/market-analysis.mdx
@@ -672,7 +672,7 @@ graph TD
     href="/signals/technical-indicators"
     icon="chart-bar"
   >
-    Learn about Hyperscript's technical indicator tools
+    Learn about Nimbus's technical indicator tools
   
 </Card>
   <Card
