--- a/guides/risk-management-best-practices.mdx
+++ b/guides/risk-management-best-practices.mdx
@@ -610,7 +610,7 @@ Consider risks across different timeframes:
     href="/portfolio/risk-management-tools"
     icon="tools"
   >
-    Explore Hyperscript's risk management features
+    Explore Nimbus's risk management features
   
 </Card>
   <Card
