--- a/guides/strategy-building.mdx
+++ b/guides/strategy-building.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Strategy Building Guide"
-description: "Learn how to build, customize, and optimize automated trading strategies in Hyperscript"
+description: "Learn how to build, customize, and optimize automated trading strategies in Nimbus"
 ---
 
 ## Introduction to Strategy Building
 
-Building effective automated trading strategies requires a combination of market understanding, technical analysis, risk management, and systematic testing. This guide walks you through the complete process of creating custom strategies in Hyperscript.
+Building effective automated trading strategies requires a combination of market understanding, technical analysis, risk management, and systematic testing. This guide walks you through the complete process of creating custom strategies in Nimbus.
 
 <CardGroup cols={2}>
   <Card title="Strategy Fundamentals" icon="foundation">
@@ -109,7 +109,7 @@ Define precise conditions for entering positions:
 
 </AccordionGroup>
 
-## Implementation in Hyperscript
+## Implementation in Nimbus
 
 ### Using the Strategy Builder
 
@@ -121,7 +121,7 @@ Define precise conditions for entering positions:
 
 #### Step 1: Strategy Setup
 
-1. **Navigate to Strategy Builder** in your Hyperscript dashboard
+1. **Navigate to Strategy Builder** in your Nimbus dashboard
 2. **Select Strategy Template** based on your chosen approach
 3. **Configure Basic Parameters**:
    - Strategy name and description
