--- a/guides/troubleshooting.mdx
+++ b/guides/troubleshooting.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Troubleshooting Guide"
-description: "Solutions to common issues and problems in Hyperscript automated trading"
+description: "Solutions to common issues and problems in Nimbus automated trading"
 ---
 
 ## Common Issues and Solutions
 
-This troubleshooting guide addresses the most frequently encountered issues in Hyperscript. Use this guide to quickly diagnose and resolve problems with your automated trading strategies.
+This troubleshooting guide addresses the most frequently encountered issues in Nimbus. Use this guide to quickly diagnose and resolve problems with your automated trading strategies.
 
 <CardGroup cols={2}>
   <Card title="Strategy Issues" icon="wrench">
@@ -408,7 +408,7 @@ This troubleshooting guide addresses the most frequently encountered issues in H
 
 <AccordionGroup>
   <Accordion title="Cannot Connect Exchange Account">
-    Problems linking exchange accounts to Hyperscript **Setup Checklist:**
+    Problems linking exchange accounts to Nimbus **Setup Checklist:**
     <CheckList>
       - [ ] Exchange account verified and active - [ ] API trading enabled on
       exchange - [ ] Correct API key and secret entered - [ ] IP address
@@ -533,7 +533,7 @@ This troubleshooting guide addresses the most frequently encountered issues in H
 
 <AccordionGroup>
   <Accordion title="Strategy Health Check">
-    Use Hyperscript's built-in diagnostic tools **Health Check Items:**
+    Use Nimbus's built-in diagnostic tools **Health Check Items:**
     <CheckList>
       - [ ] Strategy configuration validity - [ ] Account balance sufficiency -
       [ ] API connection status - [ ] Risk limit compliance - [ ] Recent
@@ -595,8 +595,8 @@ This troubleshooting guide addresses the most frequently encountered issues in H
 </Accordion>
 
   <Accordion title="Direct Support">
-    Contact Hyperscript support team **Support Channels:** - **Email Support**:
-    support@hyperscript.xyz - **Live Chat**: Available during business hours -
+    Contact Nimbus support team **Support Channels:** - **Email Support**:
+    support@nimbus.trade - **Live Chat**: Available during business hours -
     **Ticket System**: Track support requests - **Priority Support**: Available
     for premium users **Before Contacting Support:**
     <CheckList>
@@ -680,7 +680,7 @@ This troubleshooting guide addresses the most frequently encountered issues in H
     Review setup fundamentals to ensure proper configuration
   
 </Card>
-  <Card title="Support" href="mailto:support@hyperscript.xyz" icon="envelope">
+  <Card title="Support" href="mailto:support@nimbus.trade" icon="envelope">
     Contact support for additional assistance
   
 </Card>
