--- a/index.mdx
+++ b/index.mdx
@@ -1,11 +1,11 @@
 ---
-title: "Welcome to Hyperscript"
+title: "Welcome to Nimbus"
 description: "Automated agent-based trading on Hyperliquid - unlock advanced trading strategies for everyone, beginner to pro"
 ---
 
 ## Automated Trading for Everyone
 
-Hyperscript bridges the gap between manual trading and professional automation with a comprehensive suite of tools designed for every trader level.
+Nimbus bridges the gap between manual trading and professional automation with a comprehensive suite of tools designed for every trader level.
 
 <Card
   title="Quick Start Guide"
@@ -137,9 +137,9 @@ Everything you need for professional automated trading.
 ## Ready to Start Trading?
 
 <Card
-  title="Launch Hyperscript App"
+  title="Launch Nimbus App"
   icon="external-link"
-  href="https://app.hyperscript.xyz"
+  href="https://app.nimbus.trade"
 >
   Access the full trading platform and start automating your strategies today.
 
