--- a/marketplace/publishing-strategies.mdx
+++ b/marketplace/publishing-strategies.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Publishing Your Strategies"
-description: "Learn how to share your successful trading strategies with the Hyperscript community and earn revenue from your expertise"
+description: "Learn how to share your successful trading strategies with the Nimbus community and earn revenue from your expertise"
 ---
 
 ## Why Publish Your Strategies?
 
-Publishing your successful trading strategies on the Hyperscript marketplace creates multiple benefits:
+Publishing your successful trading strategies on the Nimbus marketplace creates multiple benefits:
 
 <CardGroup cols={2}>
 <Card title="Monetize Your Expertise" icon="dollar-sign">
@@ -54,7 +54,7 @@ To maintain marketplace quality, creators must meet specific requirements:
 **Basic eligibility for strategy publishing:**
 
 <CheckList>
-  - **Verified Hyperscript account** (minimum 3 months active) - **Live trading
+  - **Verified Nimbus account** (minimum 3 months active) - **Live trading
   history** (minimum 6 months of documented results) - **Positive community
   standing** (good reputation, no violations) - **Identity verification** (KYC
   compliance for revenue sharing) - **Contact information** (responsive support
