--- a/marketplace/strategy-marketplace.mdx
+++ b/marketplace/strategy-marketplace.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Strategy Marketplace"
-description: "Discover, share, and monetize trading strategies with the Hyperscript community marketplace"
+description: "Discover, share, and monetize trading strategies with the Nimbus community marketplace"
 ---
 
 ## What is the Strategy Marketplace?
 
-The Hyperscript Strategy Marketplace is a community-driven platform where traders can discover proven strategies, share their own successful bots, and monetize their trading expertise. It creates a collaborative ecosystem where knowledge and profits are shared among community members.
+The Nimbus Strategy Marketplace is a community-driven platform where traders can discover proven strategies, share their own successful bots, and monetize their trading expertise. It creates a collaborative ecosystem where knowledge and profits are shared among community members.
 
 ## How the Marketplace Works
 
@@ -171,7 +171,7 @@ Strategy Performance Profile:
 - **Capital Requirements**: Minimum $500, recommended $2,000+
 - **Risk Management**: Built-in stop losses and position limits
 - **Customization Options**: Adjustable risk levels and position sizing
-- **Dependencies**: Requires Hyperscript signal access
+- **Dependencies**: Requires Nimbus signal access
 - **Update Frequency**: Strategy parameters updated monthly
 
 </Accordion>
@@ -322,7 +322,7 @@ Share your successful strategies and earn revenue from the community:
 **Qualifications to publish strategies:**
 
 <CheckList>
-  - Verified Hyperscript account (3+ months) - Demonstrated trading performance
+  - Verified Nimbus account (3+ months) - Demonstrated trading performance
   (6+ months live results) - Strategy backtesting results (minimum 12 months) -
   Community guidelines agreement - Technical documentation completion - Risk
   disclosure statements - Responsive customer support commitment
@@ -338,7 +338,7 @@ Share your successful strategies and earn revenue from the community:
 2. **Performance Documentation**: Compile backtests and live results
 3. **Creator Application**: Apply for creator status with credentials
 4. **Strategy Submission**: Submit strategy with full documentation
-5. **Review Process**: Hyperscript team reviews for quality and compliance
+5. **Review Process**: Nimbus team reviews for quality and compliance
 6. **Community Preview**: Limited release for community feedback
 7. **Full Publication**: Strategy goes live in marketplace
 8. **Ongoing Support**: Provide subscriber support and updates
