--- a/portfolio/dashboard.mdx
+++ b/portfolio/dashboard.mdx
@@ -5,7 +5,7 @@ description: "Your centralized command center for monitoring all trading strateg
 
 ## Portfolio Dashboard Overview
 
-The Hyperscript Portfolio Dashboard is your comprehensive control center that provides real-time visibility into all your trading activities, performance metrics, and risk exposures across multiple strategies and assets.
+The Nimbus Portfolio Dashboard is your comprehensive control center that provides real-time visibility into all your trading activities, performance metrics, and risk exposures across multiple strategies and assets.
 
 ## Dashboard Layout & Navigation
 
