--- a/portfolio/performance-analytics.mdx
+++ b/portfolio/performance-analytics.mdx
@@ -5,7 +5,7 @@ description: "Deep dive into your trading performance with comprehensive analyti
 
 ## What is Performance Analytics?
 
-Performance Analytics in Hyperscript provides comprehensive insights into your trading activities, helping you understand profitability, risk metrics, and strategy effectiveness across all your automated trading bots.
+Performance Analytics in Nimbus provides comprehensive insights into your trading activities, helping you understand profitability, risk metrics, and strategy effectiveness across all your automated trading bots.
 
 <CardGroup cols={2}>
   <Card title="Real-Time Metrics" icon="chart-line">
@@ -216,7 +216,7 @@ Monitor correlations between:
 </Accordion>
 
   <Accordion title="Peer Comparison">
-    Anonymous comparison with other Hyperscript users: - Similar strategy
+    Anonymous comparison with other Nimbus users: - Similar strategy
     performance - Risk-adjusted return rankings - Portfolio size cohort analysis
 
 </Accordion>
@@ -227,7 +227,7 @@ Monitor correlations between:
 
 ### Automated Recommendations
 
-Hyperscript's AI analyzes your performance data to provide:
+Nimbus's AI analyzes your performance data to provide:
 
 <CheckList>
   - [ ] Underperforming strategy identification - [ ] Optimal rebalancing
