--- a/portfolio/risk-management-tools.mdx
+++ b/portfolio/risk-management-tools.mdx
@@ -5,7 +5,7 @@ description: "Comprehensive risk management features to protect your portfolio a
 
 ## What are Risk Management Tools?
 
-Hyperscript's Risk Management Tools provide a comprehensive suite of features designed to protect your capital, limit losses, and optimize risk-adjusted returns across all your automated trading strategies.
+Nimbus's Risk Management Tools provide a comprehensive suite of features designed to protect your capital, limit losses, and optimize risk-adjusted returns across all your automated trading strategies.
 
 <CardGroup cols={2}>
   <Card title="Portfolio Protection" icon="shield">
@@ -171,7 +171,7 @@ Key monitoring features include:
 
 </Warning>
 
-Hyperscript's stress testing features include:
+Nimbus's stress testing features include:
 
 ```mermaid
 graph LR
