--- a/signals/orderbook-signal-engine.mdx
+++ b/signals/orderbook-signal-engine.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Orderbook Signal Engine"
-description: "Deep dive into Hyperscript's proprietary orderbook analysis engine that provides unique market microstructure insights unavailable anywhere else"
+description: "Deep dive into Nimbus's proprietary orderbook analysis engine that provides unique market microstructure insights unavailable anywhere else"
 ---
 
 ## What is the Orderbook Signal Engine?
 
-Hyperscript's Orderbook Signal Engine is our proprietary system that continuously analyzes the full Hyperliquid orderbook to generate real-time trading signals and market insights. Unlike traditional technical analysis that relies on price and volume data, our engine examines the complete market microstructure to predict price movements before they occur.
+Nimbus's Orderbook Signal Engine is our proprietary system that continuously analyzes the full Hyperliquid orderbook to generate real-time trading signals and market insights. Unlike traditional technical analysis that relies on price and volume data, our engine examines the complete market microstructure to predict price movements before they occur.
 
 ## Why Orderbook Analysis Matters
 
@@ -21,7 +21,7 @@ Most trading platforms only show you the tip of the iceberg - completed trades a
 
 </Card>
 
-<Card title="Hyperscript Advantage" icon="microscope">
+<Card title="Nimbus Advantage" icon="microscope">
 **What our engine reveals:**
 - Real-time order flow intentions
 - Hidden liquidity patterns
@@ -233,9 +233,9 @@ Every signal comes with a confidence score based on:
 
 </AccordionGroup>
 
-## Unique Hyperscript Signals
+## Unique Nimbus Signals
 
-### Signals Available Only on Hyperscript
+### Signals Available Only on Nimbus
 
 These proprietary signals are exclusive to our platform:
 
