--- a/signals/technical-indicators.mdx
+++ b/signals/technical-indicators.mdx
@@ -5,7 +5,7 @@ description: "Advanced technical analysis tools enhanced with orderbook data and
 
 ## Enhanced Technical Analysis
 
-Hyperscript's technical indicators go beyond traditional price-based analysis by incorporating real-time orderbook data and market microstructure insights. This combination provides more accurate signals and better timing for your trading strategies.
+Nimbus's technical indicators go beyond traditional price-based analysis by incorporating real-time orderbook data and market microstructure insights. This combination provides more accurate signals and better timing for your trading strategies.
 
 ## Traditional vs Enhanced Indicators
 
@@ -19,7 +19,7 @@ Hyperscript's technical indicators go beyond traditional price-based analysis by
 
 </Card>
 
-<Card title="Hyperscript Enhanced" icon="microscope">
+<Card title="Nimbus Enhanced" icon="microscope">
 **Orderbook-enhanced analysis:**
 - Incorporates real-time orderbook depth
 - Predictive of price movements
