--- a/trading-strategies/signal-based-trading.mdx
+++ b/trading-strategies/signal-based-trading.mdx
@@ -1,13 +1,13 @@
 ---
 title: "Signal-Based Trading"
-description: "Leverage Hyperscript's proprietary orderbook signals and technical indicators for intelligent automated trading"
+description: "Leverage Nimbus's proprietary orderbook signals and technical indicators for intelligent automated trading"
 ---
 
 ## What is Signal-Based Trading?
 
-Signal-based trading uses market data, technical indicators, and proprietary signals to make automated trading decisions. Hyperscript's advanced orderbook signal engine provides unique insights unavailable on other platforms, enabling sophisticated trading strategies.
+Signal-based trading uses market data, technical indicators, and proprietary signals to make automated trading decisions. Nimbus's advanced orderbook signal engine provides unique insights unavailable on other platforms, enabling sophisticated trading strategies.
 
-## Hyperscript's Signal Advantage
+## Nimbus's Signal Advantage
 
 Our proprietary signal engine analyzes the full Hyperliquid orderbook in real-time to generate actionable trading signals:
 
