--- a/trading-strategies/trading-wizard.mdx
+++ b/trading-strategies/trading-wizard.mdx
@@ -5,7 +5,7 @@ description: "Get personalized trading bot recommendations and configurations us
 
 ## What is the Trading Wizard?
 
-The Trading Wizard is Hyperscript's AI-powered assistant that analyzes your trading goals, risk tolerance, market outlook, and capital to recommend optimal trading strategies. It provides personalized bot configurations, risk management settings, and ongoing strategy optimization.
+The Trading Wizard is Nimbus's AI-powered assistant that analyzes your trading goals, risk tolerance, market outlook, and capital to recommend optimal trading strategies. It provides personalized bot configurations, risk management settings, and ongoing strategy optimization.
 
 ## How the Trading Wizard Works
 
@@ -380,7 +380,7 @@ The Wizard helps plan for different market scenarios:
 
 </AccordionGroup>
 
-### Integration with Other Hyperscript Features
+### Integration with Other Nimbus Features
 
 The Wizard leverages all platform capabilities:
 
